[tool.poetry]
name = "shikithon"
version = "2.3.1"
description = "Yet another Python wrapper for Shikimori API"
authors = [
    "SecondThundeR <awayfromgalaxy@gmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SecondThundeR/shikithon"
repository = "https://github.com/SecondThundeR/shikithon"
documentation = "https://github.com/SecondThundeR/shikithon/README.md"
packages = [
    { include = "shikithon", from = "." }
]
keywords = [
    "Python", "Shikimori", "API"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.build]
generate-setup-file = false

[tool.yapf]
based_on_style = "google"

[tool.isort]
profile = "google"

[tool.poetry.dependencies]
python = "^3.8.10"
pydantic = "^1.10.2"
loguru = "^0.6.0"
validators = "^0.20.0"
aiohttp = "^3.8.3"
pyrate-limiter = "^2.8.4"
backoff = "^2.2.1"
typing-extensions = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
