[tool.poetry]
name = "shikithon"
version = "2.6.0"
description = "Yet another Python wrapper for Shikimori API"
authors = ["SecondThundeR <awayfromgalaxy@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SecondThundeR/shikithon"
repository = "https://github.com/SecondThundeR/shikithon"
documentation = "https://github.com/SecondThundeR/shikithon/README.md"
packages = [{ include = "shikithon", from = "." }]
keywords = ["Python", "Shikimori", "API"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.build]
generate-setup-file = false

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[tool.poetry.dependencies]
python = "^3.8.10"
pydantic = "^2.4.2"
loguru = "^0.7.2"
validators = "^0.22.0"
aiohttp = "^3.8.6"
backoff = "^2.2.1"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
